--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,5 +1,15 @@
 
+Footer-be linkeket beillesztei felirattal !!!!!
 
+
+
+Game Faeature
+HomeComponent NAvigáljon a Game Featurre
+PrivacyPolicy => Faeature alapra
+PageNotFound == SiteMap egyiket törölni /SITEMAP marad/
+
+
+Oldaltartalmak JSON-be 
 
 
 
@@ -9,8 +19,10 @@ Nice  To Have:
    -- a remoteComponent tombot a navigation data-ba integrálni
    -- java script browserbe true/false ellenőrzés az index HTML-be.
 
+    ---képeket takaritani ami nem kell
+   
 
-
+lang atribute to the page
 
 
 
@@ -33,3 +45,12 @@ Nice  To Have:
         if ( (aktuel>this.elozoTouchPos) && (window.pageYOffset==0) ){console.log("felfele scroll NAVI")}
         if (aktuel<this.elozoTouchPos){console.log("lefele scroll")}
         this.elozoTouchPos=aktuel;
+
+
+
+-------------------------------------------------------------------------------
+
+@font-face {
+    font-family: myFirstFont;
+    src: url(sansation_light.woff);
+}
