--- a/src/TODO.txt
+++ b/src/TODO.txt
@@ -1,10 +1,11 @@
 
 TODO:
-    képek a service site ba animáció befejezni
-    team comőponent gomb tunjon el ha mar nnincs több elem
-    testelni mobil nezetben a navigaciot a team komponensnel
-    testelni a csukodasokat mobil nezetben
-
+    képek a service site ba
+    képek linkek a team site ba
+    team component gomb tunjon el ha mar nnincs több elem és legyen középen.
+    mobil nezet hover classok kiváltása (media queri-be kikapcsolni)
+    kezdőképet mobil nézetbe 20-41 pixellel feljeb
+    kárgyák mobil nezete, blank kard-ot kicsire levenni vagy kivenni hogy latszon a többi esetleg a gombot bele tenni.
 
 
 lang atribute to the page
